# serializer version: 1
# name: test_service[get_energy_prices-service_data1]
  dict({
    'prices': list([
      dict({
        'price': 0.158361775,
        'timestamp': '2026-04-10 07:00:00+00:00',
      }),
      dict({
        'price': 0.15199415,
        'timestamp': '2026-04-10 08:00:00+00:00',
      }),
      dict({
        'price': 0.129712,
        'timestamp': '2026-04-10 09:00:00+00:00',
      }),
      dict({
        'price': 0.12542255,
        'timestamp': '2026-04-10 10:00:00+00:00',
      }),
      dict({
        'price': 0.1105819,
        'timestamp': '2026-04-10 11:00:00+00:00',
      }),
      dict({
        'price': 0.11546425,
        'timestamp': '2026-04-10 12:00:00+00:00',
      }),
      dict({
        'price': 0.10231155,
        'timestamp': '2026-04-10 13:00:00+00:00',
      }),
      dict({
        'price': 0.122527625,
        'timestamp': '2026-04-10 14:00:00+00:00',
      }),
      dict({
        'price': 0.146068175,
        'timestamp': '2026-04-10 15:00:00+00:00',
      }),
      dict({
        'price': 0.181984,
        'timestamp': '2026-04-10 16:00:00+00:00',
      }),
      dict({
        'price': 0.272253025,
        'timestamp': '2026-04-10 17:00:00+00:00',
      }),
      dict({
        'price': 0.288152425,
        'timestamp': '2026-04-10 18:00:00+00:00',
      }),
      dict({
        'price': 0.2064623,
        'timestamp': '2026-04-10 19:00:00+00:00',
      }),
      dict({
        'price': 0.17191075,
        'timestamp': '2026-04-10 20:00:00+00:00',
      }),
      dict({
        'price': 0.1521212,
        'timestamp': '2026-04-10 21:00:00+00:00',
      }),
      dict({
        'price': 0.15236925,
        'timestamp': '2026-04-10 22:00:00+00:00',
      }),
      dict({
        'price': 0.135583525,
        'timestamp': '2026-04-10 23:00:00+00:00',
      }),
      dict({
        'price': 0.12652365,
        'timestamp': '2026-04-11 00:00:00+00:00',
      }),
      dict({
        'price': 0.122267475,
        'timestamp': '2026-04-11 01:00:00+00:00',
      }),
      dict({
        'price': 0.120640025,
        'timestamp': '2026-04-11 02:00:00+00:00',
      }),
      dict({
        'price': 0.117239925,
        'timestamp': '2026-04-11 03:00:00+00:00',
      }),
      dict({
        'price': 0.116616775,
        'timestamp': '2026-04-11 04:00:00+00:00',
      }),
      dict({
        'price': 0.10214215,
        'timestamp': '2026-04-11 05:00:00+00:00',
      }),
      dict({
        'price': 0.077503525,
        'timestamp': '2026-04-11 06:00:00+00:00',
      }),
    ]),
  })
# ---
# name: test_service[get_energy_prices-service_data3]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[get_gas_prices-service_data0]
  dict({
    'prices': list([
      dict({
        'price': 0.430304930424,
        'timestamp': '2026-04-11 04:00:00+00:00',
      }),
    ]),
  })
# ---
# name: test_service[get_gas_prices-service_data2]
  dict({
    'prices': list([
    ]),
  })
# ---
